--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node build/test.js --target es6",
-    "createAccount": "tsc && node build/createAccount.js --target es6"
+    "createAccount": "tsc && node build/createAccount.js --target es6",
+    "getBalance": "tsc && node build/getBalance.js --target es6"
   },
   "author": "",
   "license": "ISC",
